@@ -1,5 +1,9 @@
 2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
+	* extensions/update_license_info.php: Delete innecesary extension.
+
+2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
 	* images/skin/skin_default/include/styles/pandora.css: Modified 
 	styles in skin like in the main css style file.
 	
